--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ packages = hymie
 zip_safe = True
 include_package_data = True
 python_requires = >=3.6
-install_requires = setuptools; mdform>=0.2; Flask=1.0.0; Flask-WTF; flask-emails; Flask-Uploads; Flask-Bootstrap4==4.0.2; pyyaml; Werkzeug==0.14.1; wtforms_components; serialize; datastruct; uwsgidecorators; arrow
+install_requires = setuptools; mdform>=0.2; Flask=1.0.0; Flask-WTF; flask-emails; Flask-Uploads; Flask-Bootstrap4==4.0.2; pyyaml; Werkzeug==0.14.1; wtforms_components; serialize; datastruct; uwsgidecorators; arrow; flask-httpauth
 setup_requires = setuptools; setuptools_scm
 
 [options.entry_points]
